--- a/03-buffalo-async-replication/Dockerfile
+++ b/03-buffalo-async-replication/Dockerfile
@@ -6,22 +6,22 @@ COPY .yarn .yarn
 COPY .yarnrc.yml ./
 RUN yarn install
 
-# Stage 2: Go build
+# Stage 2: Build Go App
 FROM gobuffalo/buffalo:v0.18.14 AS builder
 ENV GOPROXY=https://proxy.golang.org
 WORKDIR /src/app
 COPY --from=frontend /src/app /src/app
 COPY go.mod go.sum ./
 RUN go mod download
-COPY . .
+COPY . .                         
 RUN buffalo build --static -o /bin/app
 
-# Final stage
+# Final Image
 FROM alpine
 RUN apk add --no-cache bash ca-certificates postgresql-client
 WORKDIR /app
 COPY --from=builder /bin/app /bin/app
-COPY entrypoint.sh /bin/entrypoint.sh
+COPY --from=builder /src/app/entrypoint.sh /bin/entrypoint.sh   
 RUN chmod +x /bin/entrypoint.sh
 ENV ADDR=0.0.0.0
 EXPOSE 3000
