--- a/03-buffalo-async-replication/Dockerfile
+++ b/03-buffalo-async-replication/Dockerfile
@@ -6,23 +6,27 @@ COPY .yarn .yarn
 COPY .yarnrc.yml ./
 RUN yarn install
 
-# Stage 2: Build Buffalo App
-FROM gobuffalo/buffalo:v0.18.14 AS builder
-ENV GOPROXY=https://proxy.golang.org
+# Stage 2: Go Builder
+FROM golang:1.22 AS builder
+ENV CGO_ENABLED=0 GO111MODULE=on
 WORKDIR /src/app
+
 COPY --from=frontend /src/app /src/app
 COPY go.mod go.sum ./
 RUN go mod download
 COPY . .
+
+RUN go install github.com/gobuffalo/cli/cmd/buffalo@v0.18.14
 RUN buffalo build --skip-assets --static -o /bin/app
 
 # Final stage: Runtime
-FROM alpine
+FROM alpine:latest
 RUN apk add --no-cache bash ca-certificates postgresql-client
 WORKDIR /app
+
 COPY --from=builder /bin/app /bin/app
-COPY --from=builder /src/app/entrypoint.sh /bin/entrypoint.sh
+COPY entrypoint.sh /bin/entrypoint.sh  
 RUN chmod +x /bin/entrypoint.sh
-ENV ADDR=0.0.0.0
+
 EXPOSE 3000
 CMD ["/bin/entrypoint.sh"]
