--- a/03-buffalo-async-replication/Dockerfile
+++ b/03-buffalo-async-replication/Dockerfile
@@ -1,12 +1,17 @@
+# =======================
 # Stage 1: Frontend
+# =======================
 FROM node:18 AS frontend
 WORKDIR /src/app
+
 COPY package.json yarn.lock ./
 COPY .yarn .yarn
 COPY .yarnrc.yml ./
 RUN yarn install
 
+# =======================
 # Stage 2: Go Builder
+# =======================
 FROM golang:1.23 AS builder
 ENV GO111MODULE=on
 WORKDIR /src/app
@@ -19,26 +24,30 @@ COPY . .
 # 🟢 Install Buffalo CLI
 RUN go install github.com/gobuffalo/cli/cmd/buffalo@v0.18.14
 
-# 🟢 Build app binary tanpa --static agar tidak error CGO
-RUN buffalo build --skip-assets -o /bin/app
+# 🟢 Build app binary tanpa --static
+RUN buffalo build --skip-assets -o /bin/app  # ⛔ Jangan pakai --static
 
-# Final stage: Runtime
+# =======================
+# Stage 3: Runtime
+# =======================
 FROM alpine:latest
 
-# 🟢 Tambah `git` agar bisa clone di entrypoint.sh
+# 🟢 Tambah tool yang dibutuhkan untuk entrypoint
 RUN apk add --no-cache bash ca-certificates postgresql-client git dos2unix
 
 WORKDIR /app
 
-# 🟢 Copy binary ke /bin/app
+# 🟢 Copy hasil build app ke /bin
 COPY --from=builder /bin/app /bin/app
 
-# 🟢 Simbolik link ke /bin/buffalo agar entrypoint.sh bisa pakai 'buffalo'
+# 🟢 Buat symbolic link agar `buffalo` bisa dipanggil dari shell
 RUN ln -s /bin/app /bin/buffalo
 
-# 🟢 Copy entrypoint.sh dan konversi format ke Unix
+# 🟢 Copy entrypoint.sh dan pastikan format Unix
 COPY entrypoint.sh /bin/entrypoint.sh
 RUN dos2unix /bin/entrypoint.sh && chmod +x /bin/entrypoint.sh
 
 EXPOSE 3000
+
+# ✅ Jalankan script entrypoint yang akan clone + migrate + run buffalo
 CMD ["/bin/entrypoint.sh"]
