--- a/03-buffalo-async-replication/Dockerfile
+++ b/03-buffalo-async-replication/Dockerfile
@@ -1,53 +1,43 @@
-# =======================
 # Stage 1: Frontend
-# =======================
 FROM node:18 AS frontend
 WORKDIR /src/app
-
 COPY package.json yarn.lock ./
 COPY .yarn .yarn
 COPY .yarnrc.yml ./
 RUN yarn install
 
-# =======================
 # Stage 2: Go Builder
-# =======================
 FROM golang:1.23 AS builder
 ENV GO111MODULE=on
 WORKDIR /src/app
 
+# 🟢 Salin source
 COPY --from=frontend /src/app /src/app
 COPY go.mod go.sum ./
 RUN go mod download
 COPY . .
 
-# 🟢 Install Buffalo CLI
+# 🟢 Install Buffalo CLI (binary ada di /go/bin/buffalo)
 RUN go install github.com/gobuffalo/cli/cmd/buffalo@v0.18.14
 
-# 🟢 Build app binary tanpa --static
-RUN buffalo build --skip-assets -o /bin/app  # ⛔ Jangan pakai --static
+# 🟢 Build binary app ke path berbeda
+RUN buffalo build --skip-assets -o /src/app/bin/app
 
-# =======================
 # Stage 3: Runtime
-# =======================
 FROM alpine:latest
-
-# 🟢 Tambah tool yang dibutuhkan untuk entrypoint
 RUN apk add --no-cache bash ca-certificates postgresql-client git dos2unix
 
 WORKDIR /app
 
-# 🟢 Copy hasil build app ke /bin
-COPY --from=builder /bin/app /bin/app
+# 🟢 Salin binary Buffalo CLI ke runtime container
+COPY --from=builder /go/bin/buffalo /bin/buffalo
 
-# 🟢 Buat symbolic link agar `buffalo` bisa dipanggil dari shell
-RUN ln -s /bin/app /bin/buffalo
+# 🟢 Salin hasil build app
+COPY --from=builder /src/app/bin/app /bin/app
 
-# 🟢 Copy entrypoint.sh dan pastikan format Unix
+# 🟢 Salin entrypoint dan ubah format ke Unix
 COPY entrypoint.sh /bin/entrypoint.sh
 RUN dos2unix /bin/entrypoint.sh && chmod +x /bin/entrypoint.sh
 
 EXPOSE 3000
-
-# ✅ Jalankan script entrypoint yang akan clone + migrate + run buffalo
 CMD ["/bin/entrypoint.sh"]
